fixes layout issues

--- a/projects/small-business/jenkins-butchers-re/scirpts/style.css
+++ b/projects/small-business/jenkins-butchers-re/scirpts/style.css
@@ -265,7 +265,7 @@ main {
 .banner{
 /* box */
 margin-top: -1.5em;
-	width: 90%;
+	width: 80%;
 	height: 150px;
 /* display */
 	display: block;
@@ -315,7 +315,7 @@ margin-top: -1.5em;
 /* featured photo */
 img.featured {
 	display: block;
-	max-height: 250px;
+	max-height: 350px;
 	width: 100%;
 	height: 100%;
 	margin: 1em auto;
@@ -477,7 +477,9 @@ footer p{
   color: #353137;
   height: 20px;
   font-size:.7em;
-  padding-top: .8em;
+  padding-top: 1em;
+  padding-bottom: .5em;
+  text-align: center;
 }
 
 /* /ᐠ.ꞈ.ᐟ\\\\\ / ===================================
@@ -518,6 +520,8 @@ h2.underline {
 /* h3 header act as sub-heading for content */
 h3 {
 	text-align: left;
+	font-size: 1.2em;	/*fallback if calc() doesn't work */
+	font-size: calc(1.2em + .8vw);
 }
 
 /* apply header fonts */
@@ -579,7 +583,8 @@ a:hover,  a:active, a:focus{
 	#top-nav {
 		-webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%); 
 		clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-		height: 4em;
+		height: 3em;
+		padding: 1em 0;
 		z-index: 2;
 	}
 	#top-nav ul {
@@ -592,7 +597,7 @@ a:hover,  a:active, a:focus{
 		grid-template-columns: repeat(2, 1fr);
 		grid-template-rows: repeat(3, 1fr); 
 		grid-column-gap: 1em;
-		grid-row-gap: 0;
+		grid-row-gap: 1em;
 		align-items: center;
 		height: 35vh;
   		width: 100%;
@@ -663,14 +668,94 @@ a:hover,  a:active, a:focus{
 	h3 + ul li{
 		margin-bottom: 1em;
 	} 
+	.btmWrapper {
+		gap:  8em;
+	}
+	.content-wrap {
+		padding-top: 3em;
+	}
+	h2.underline { 
+		text-align: left;
+		margin-left: 0;
+		padding-left: 8em;
+	}
+	.content-wrap:last-of-type h2{
+		margin-left: 2em;
+		padding-left: 8em;
+	}
 }
 
 @media (min-width: 950px) {
 	body {
 		font-size: 120%;
 	}
+	header {
+		padding-bottom: 2em;
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		grid-template-rows: repeat(2, 1fr);
+		background-color: #353137;
+		width: 100%;
+		max-height: 25vh;
+	}
+	header > a { 
+		grid-area: 1 / 1 / 3 / 2; 
+		transform: rotate(-3deg);
+	}
+	picture.shop-logo {
+		background-color: #eeeff0;
+		transform: rotate(-3deg);
+	}
+	header .upper {
+		grid-area: 1 / 2 / 2 / 3; 
+		margin: 2em 1em 0 -2em;
+	}
+	header .lower {
+		grid-area: 2 / 2 / 3 / 3; 
+		margin: -2em 1em 0 -2em;
+	}
+	.upper, .lower {
+		width: auto;
+		color: #eeeff0;
+	}
+	header > nav {  
+		grid-area: 1 / 3 / 3 / 4;
+		margin: 1em 2em 0 0;
+		background-color: transparent;
+		transform: rotate(-3deg);
+	}
 	.offers {
 		display: grid;
 		grid-template-columns: 1fr 1fr 1fr 1fr;
+	}
+	main {
+		margin-top: -10vh;
+	}
+	.banner {
+		margin-left: 5%;
+		width: 80%;
+		height: 20vh;
+	}
+	.wrap1 {
+		padding:  0 3em;
+		gap: 5rem;
+	}
+	.wrap2 {
+		padding:  0 3em;
+		grid-column-gap: 6em;
+	}
+	.btmWrapper {
+		gap:  15em;
+	}
+	.content-wrap {
+		padding-top:  5em;
+	}
+	h2.underline { 
+		margin-left: 10%;
+		padding-left: 8em;
+	}
+	.content-wrap:last-of-type h2{
+		margin: 1em 0 2em 5em;
+		padding-left: 10em;
 	}
 }
